renv, r-devel, few todos

--- a/Workflow/library.bib
+++ b/Workflow/library.bib
@@ -91,7 +91,8 @@ author = {Conzelmann, M and Offenburger, S L and Asadulina, A and Keller, T and 
 doi = {10.1073/pnas.1109085108},
 edition = {2011/10/19},
 file = {:Users/nils/Documents/Mendeley Desktop/Conzelmann et al. - 2011 - Neuropeptides regulate swimming depth of Platynereis larvae.pdf:pdf},
-isbn = {1091-6490 (Electronic)0027-8424 (Linking)},
+isbn = {1091-6490 (Electronic)
+0027-8424 (Linking)},
 journal = {Proc Natl Acad Sci U S A},
 keywords = {*Locomotion,Animals,Behavior, Animal,Cilia/metabolism,Electrophysiology/methods,FMRFamide/pharmacology,Image Processing, Computer-Assisted/methods,Larva/metabolism/physiology,Molecular Sequence Data,Muscles/physiology,Neurons/metabolism,Neuropeptides/*metabolism,Polychaeta/*embryology/*physiology,Swimming},
 language = {eng},
@@ -132,7 +133,8 @@ author = {Marlow, H and Tosches, M A and Tomer, R and Steinmetz, P R and Lauri, 
 doi = {10.1186/1741-7007-12-7},
 edition = {2014/01/31},
 file = {:Users/nils/Documents/Mendeley Desktop//Marlow et al. - 2014 - Larval body patterning and apical organs are conserved in animal evolution(2).pdf:pdf},
-isbn = {1741-7007 (Electronic)1741-7007 (Linking)},
+isbn = {1741-7007 (Electronic)
+1741-7007 (Linking)},
 journal = {BMC Biol},
 language = {eng},
 pages = {7},
@@ -217,7 +219,8 @@ author = {Tosches, M A and Bucher, D and Vopalensky, P and Arendt, D},
 doi = {10.1016/j.cell.2014.07.042},
 edition = {2014/09/27},
 file = {:Users/nils/Documents/Mendeley Desktop//Tosches et al. - 2014 - Melatonin signaling controls circadian swimming behavior in marine zooplankton.pdf:pdf},
-isbn = {1097-4172 (Electronic)0092-8674 (Linking)},
+isbn = {1097-4172 (Electronic)
+0092-8674 (Linking)},
 journal = {Cell},
 language = {eng},
 number = {1},
@@ -244,7 +247,8 @@ author = {Conzelmann, M and Williams, E A and Tunaru, S and Randel, N and Shahid
 doi = {10.1073/pnas.1220285110},
 edition = {2013/04/10},
 file = {:Users/nils/Documents/Mendeley Desktop/Conzelmann et al. - 2013 - Conserved MIP receptor-ligand pair regulates Platynereis larval settlement.pdf:pdf},
-isbn = {1091-6490 (Electronic)0027-8424 (Linking)},
+isbn = {1091-6490 (Electronic)
+0027-8424 (Linking)},
 journal = {Proc Natl Acad Sci U S A},
 keywords = {Animals,Annelida/*physiology,DNA, Complementary/metabolism,Dose-Response Relationship, Drug,Expressed Sequence Tags,Gene Knockdown Techniques,Gene Library,Image Processing, Computer-Assisted,Larva/physiology,Ligands,Microscopy, Electron, Scanning,Microscopy, Electron, Transmission,Molecular Sequence Data,Neurons/metabolism,Neuropeptides/*physiology,Receptors, G-Protein-Coupled/physiology,Receptors, Neuropeptide/*chemistry/*physiology,Signal Transduction},
 language = {eng},
@@ -261,7 +265,8 @@ abstract = {The insect, annelid and vertebrate forebrains harbour two major cent
 author = {Tosches, Maria Antonietta and Arendt, Detlev},
 doi = {10.1016/j.conb.2013.09.005},
 file = {:Users/nils/Documents/Mendeley Desktop//Tosches, Arendt - 2013 - The bilaterian forebrain An evolutionary chimaera.pdf:pdf},
-isbn = {1873-6882 (Electronic)0959-4388 (Linking)},
+isbn = {1873-6882 (Electronic)
+0959-4388 (Linking)},
 issn = {09594388},
 journal = {Current Opinion in Neurobiology},
 number = {6},
@@ -294,7 +299,8 @@ abstract = {Neuropeptides are signaling molecules that commonly act via G protei
 author = {J{\'{e}}kely, G{\'{a}}sp{\'{a}}r},
 doi = {10.1073/pnas.1221833110},
 file = {:Users/nils/Documents/Mendeley Desktop//J{\'{e}}kely - 2013 - Global view of the evolution and diversity of metazoan neuropeptide signaling(3).pdf:pdf},
-isbn = {1091-6490 (Electronic)0027-8424 (Linking)},
+isbn = {1091-6490 (Electronic)
+0027-8424 (Linking)},
 issn = {1091-6490},
 journal = {Proceedings of the National Academy of Sciences of the United States of America},
 keywords = {Animals,Base Sequence,Chordata, Nonvertebrate,Chordata, Nonvertebrate: genetics,Chordata, Nonvertebrate: metabolism,Evolution, Molecular,Molecular Sequence Data,Neuropeptides,Neuropeptides: genetics,Neuropeptides: metabolism,Placozoa,Placozoa: genetics,Placozoa: metabolism,Receptors, G-Protein-Coupled,Receptors, G-Protein-Coupled: genetics,Receptors, G-Protein-Coupled: metabolism},
@@ -311,7 +317,8 @@ abstract = {The question of whether the ancestral bilaterian had a central nervo
 author = {Holland, Linda Z and Carvalho, Jo{\~{a}}o E and Escriva, Hector and Laudet, Vincent and Schubert, Michael and Shimeld, Sebastian M and Yu, Jr-Kai},
 doi = {10.1186/2041-9139-4-27},
 file = {:Users/nils/Documents/Mendeley Desktop//Holland et al. - 2013 - Evolution of bilaterian central nervous systems a single origin.pdf:pdf},
-isbn = {2041-9139 (Electronic)2041-9139 (Linking)},
+isbn = {2041-9139 (Electronic)
+2041-9139 (Linking)},
 issn = {2041-9139},
 journal = {EvoDevo},
 keywords = {Amphioxus,Central nervous system evolution,Hemichordate,Nerve cord,Tunicate,Urbilaterian,Vertebrate brain,amphioxus,central nervous system evolution,hemichordate,tunicate,urbilaterian,vertebrate brain},
@@ -329,7 +336,8 @@ abstract = {BACKGROUND: The marine annelid Platynereis dumerilii is emerging as 
 author = {Conzelmann, Markus and Williams, Elizabeth a and Krug, Karsten and Franz-Wachtel, Mirita and Macek, Boris and J{\'{e}}kely, G{\'{a}}sp{\'{a}}r},
 doi = {10.1186/1471-2164-14-906},
 file = {:Users/nils/Documents/Mendeley Desktop/Conzelmann et al. - 2013 - The neuropeptide complement of the marine annelid Platynereis dumerilii.pdf:pdf},
-isbn = {1471-2164 (Electronic)1471-2164 (Linking)},
+isbn = {1471-2164 (Electronic)
+1471-2164 (Linking)},
 issn = {1471-2164},
 journal = {BMC genomics},
 keywords = {10,3,allatostatin,allatotropin,diuretic hormone,lophotrochozoa,neurobiology,neuroendocrinology,peptidomics,proenkephalin,transcriptomics},
@@ -401,7 +409,8 @@ author = {Denes, A S and Jekely, G and Steinmetz, P R and Raible, F and Snyman, 
 doi = {10.1016/j.cell.2007.02.040},
 edition = {2007/04/24},
 file = {:Users/nils/Documents/Mendeley Desktop//Denes et al. - 2007 - Molecular architecture of annelid nerve cord supports common origin of nervous system centralization in bilateria.pdf:pdf},
-isbn = {0092-8674 (Print)0092-8674 (Linking)},
+isbn = {0092-8674 (Print)
+0092-8674 (Linking)},
 journal = {Cell},
 keywords = {*Biological Evolution,*Body Patterning,Animals,Bone Morphogenetic Proteins/metabolism,Central Nervous System/*embryology,Gene Expression Regulation, Developmental,Homeodomain Proteins/genetics,Neurons/cytology/metabolism,Paired Box Transcription Factors/genetics,Polychaeta/*embryology,Transcription Factors/genetics,Vertebrates/embryology},
 language = {eng},
@@ -427,7 +436,8 @@ author = {Tessmar-Raible, K and Raible, F and Christodoulou, F and Guy, K and Re
 doi = {10.1016/j.cell.2007.04.041},
 edition = {2007/07/03},
 file = {:Users/nils/Documents/Mendeley Desktop//Tessmar-Raible et al. - 2007 - Conserved sensory-neurosecretory cell types in annelid and fish forebrain insights into hypothalamus evol.pdf:pdf},
-isbn = {0092-8674 (Print)0092-8674 (Linking)},
+isbn = {0092-8674 (Print)
+0092-8674 (Linking)},
 journal = {Cell},
 keywords = {*Biological Evolution,Animals,Annelida/anatomy {\&} histology/*physiology,Biological Markers/metabolism,Conserved Sequence/genetics,Evolution, Molecular,Hypothalamus/*metabolism/ultrastructure,MicroRNAs/genetics,Microscopy, Electron, Transmission,Neurons, Afferent/*metabolism/ultrastructure,Neuropeptides/metabolism/secretion,Neurosecretion/physiology,Neurosecretory Systems/*metabolism/ultrastructure,Species Specificity,Transcription Factors/genetics,Vasotocin/metabolism/secretion,Zebrafish/anatomy {\&} histology/*physiology},
 language = {eng},
@@ -967,7 +977,8 @@ abstract = {Variation in gene expression is widespread within and between specie
 author = {Duveau, Fabien and Toubiana, William and Wittkopp, Patricia J.},
 doi = {10.1093/molbev/msx224},
 file = {:Users/nils/Documents/Mendeley Desktop/msx224.pdf:pdf},
-isbn = {0737-40381537-1719},
+isbn = {0737-4038
+1537-1719},
 issn = {15371719},
 journal = {Molecular biology and evolution},
 keywords = {distribution of mutational effects,fitness optimum,gene expression,gene regulation,robustness},
@@ -3280,7 +3291,8 @@ abstract = {The establishment of correct neurotransmitter characteristics is an 
 author = {Cho, Hyong Ho and Cargnin, Francesca and Kim, Yujin and Lee, Bora and Kwon, Ryuk Jun and Nam, Heejin and Shen, Rongkun and Barnes, Anthony P. and Lee, Jae W. and Lee, Seunghee and Lee, Soo Kyung},
 doi = {10.1371/journal.pgen.1004280},
 file = {:Users/nils/Documents/Mendeley Desktop/Cho et al. - 2014 - Isl1 Directly Controls a Cholinergic Neuronal Identity in the Developing Forebrain and Spinal Cord by Forming Cell T.pdf:pdf},
-isbn = {1553-7404 (Electronic)1553-7390 (Linking)},
+isbn = {1553-7404 (Electronic)
+1553-7390 (Linking)},
 issn = {15537404},
 journal = {PLoS Genetics},
 number = {4},
@@ -3309,7 +3321,8 @@ abstract = {Immunotherapy is proving to be an effective therapeutic approach in 
 author = {Chen, Daniel S. and Mellman, Ira},
 doi = {10.1038/nature21349},
 file = {:Users/nils/Documents/Mendeley Desktop/chen2017.pdf:pdf},
-isbn = {1476-4687 (Electronic)0028-0836 (Linking)},
+isbn = {1476-4687 (Electronic)
+0028-0836 (Linking)},
 issn = {14764687},
 journal = {Nature},
 number = {7637},
@@ -5067,7 +5080,8 @@ abstract = {MOTIVATION: Recent transcriptome studies have revealed that total tr
 author = {Katayama, Shintaro and T{\"{o}}h{\"{o}}nen, Virpi and Linnarsson, Sten and Kere, Juha},
 doi = {10.1093/bioinformatics/btt511},
 file = {:Users/nils/Documents/Mendeley Desktop/Katayama et al. - 2013 - SAMstrt Statistical test for differential expression in single-cell transcriptome with spike-in normalization.pdf:pdf},
-isbn = {1367-4811 (Electronic)1367-4803 (Linking)},
+isbn = {1367-4811 (Electronic)
+1367-4803 (Linking)},
 issn = {13674803},
 journal = {Bioinformatics},
 number = {22},
@@ -5672,7 +5686,8 @@ abstract = {Motivation: Single-cell RNA sequencing (scRNA-seq) is increasingly u
 author = {McCarthy, Davis J. and Campbell, Kieran R. and Lun, Aaron T.L. and Wills, Quin F.},
 doi = {10.1093/bioinformatics/btw777},
 file = {:Users/nils/Documents/Mendeley Desktop/btw777.pdf:pdf},
-isbn = {1367-4811 (Electronic)1367-4803 (Linking)},
+isbn = {1367-4811 (Electronic)
+1367-4803 (Linking)},
 issn = {14602059},
 journal = {Bioinformatics},
 number = {8},
@@ -6777,7 +6792,8 @@ year = {2011}
 author = {Zhou, Fan and Li, Xianlong and Wang, Weili and Zhu, Ping and Zhou, Jie and He, Wenyan and Ding, Meng and Xiong, Fuyin and Zheng, Xiaona and Li, Zhuan and Ni, Yanli and Mu, Xiaohuan and Wen, Lu and Cheng, Tao and Lan, Yu and Yuan, Weiping and Tang, Fuchou and Liu, Bing},
 doi = {10.1038/nature17997},
 file = {:Users/nils/Documents/Mendeley Desktop/Zhou et al. - 2016 - Tracing haematopoietic stem cell formation at single-cell resolution.pdf:pdf},
-isbn = {1476-4687 (Electronic)0028-0836 (Linking)},
+isbn = {1476-4687 (Electronic)
+0028-0836 (Linking)},
 issn = {0028-0836},
 journal = {Nature},
 number = {7604},
@@ -7166,7 +7182,8 @@ year = {2016}
 author = {McDavid, Andrew and Finak, Greg and Gottardo, Raphael},
 doi = {10.1038/nbt.3498},
 file = {:Users/nils/Documents/Mendeley Desktop/McDavid, Finak, Gottardo - 2016 - The contribution of cell cycle to heterogeneity in single-cell RNA-seq data.pdf:pdf},
-isbn = {1546-1696 (Electronic)1087-0156 (Linking)},
+isbn = {1546-1696 (Electronic)
+1087-0156 (Linking)},
 issn = {1087-0156},
 journal = {Nature Biotechnology},
 number = {6},
@@ -7300,7 +7317,8 @@ abstract = {Recent years have witnessed a flurry of important technological and 
 author = {Gamazon, Eric R. and Stranger, Barbara E.},
 doi = {10.1093/bfgp/elv017},
 file = {:Users/nils/Documents/Mendeley Desktop/elv017.pdf:pdf},
-isbn = {2041-2657 (Electronic)2041-2649 (Linking)},
+isbn = {2041-2657 (Electronic)
+2041-2649 (Linking)},
 issn = {20412657},
 journal = {Briefings in Functional Genomics},
 keywords = {Copy number variation,GWAS,Gene expression,Transcriptome,eQTLs},
@@ -7672,7 +7690,8 @@ abstract = {Most genome-wide assays provide averages across large numbers of cel
 author = {Bock, Christoph and Farlik, Matthias and Sheffield, Nathan C.},
 doi = {10.1016/j.tibtech.2016.04.004},
 file = {:Users/nils/Documents/Mendeley Desktop/Bock, Farlik, Sheffield - 2016 - Multi-Omics of Single Cells Strategies and Applications.pdf:pdf},
-isbn = {1879-3096 (Electronic)0167-7799 (Linking)},
+isbn = {1879-3096 (Electronic)
+0167-7799 (Linking)},
 issn = {18793096},
 journal = {Trends in Biotechnology},
 keywords = {bioinformatic methods,cell state profiling,combined genome/epigenome/transcriptome/proteome/m,molecular medicine,single-cell analysis,single-cell systems biology},
@@ -7734,7 +7753,8 @@ year = {2017}
 author = {Lv, Dekang and Wang, Xiang and Dong, Jun and Zhuang, Yan and Huang, Shuyu and Ma, Binbin},
 doi = {10.18632/oncotarget.7580},
 file = {:Users/nils/Documents/Mendeley Desktop/Lv et al. - 2016 - Systematic characterization of lncRNAs ' cell-to-cell expression heterogeneity in glioblastoma cells.pdf:pdf},
-isbn = {1949-2553 (Electronic)1949-2553 (Linking)},
+isbn = {1949-2553 (Electronic)
+1949-2553 (Linking)},
 issn = {19492553},
 keywords = {2015 accepted,2016,2016 published,february 11,february 23,gbm,heterogeneity,lncrna,november 11,received,self-organizing map,single-cell rna-seq},
 number = {14},
@@ -9237,7 +9257,8 @@ abstract = {Gene expression heterogeneity in the pluripotent state of mouse embr
 author = {Semrau, Stefan and Goldmann, Johanna E. and Soumillon, Magali and Mikkelsen, Tarjei S. and Jaenisch, Rudolf and {Van Oudenaarden}, Alexander},
 doi = {10.1038/s41467-017-01076-4},
 file = {:Users/nils/Documents/Mendeley Desktop/s41467-017-01076-4.pdf:pdf},
-isbn = {2041-1723 (Electronic)2041-1723 (Linking)},
+isbn = {2041-1723 (Electronic)
+2041-1723 (Linking)},
 issn = {20411723},
 journal = {Nature Communications},
 number = {1},
@@ -9576,7 +9597,8 @@ abstract = {Sex chromosomes are uniquely subject to chromosome-wide silencing du
 author = {Sin, Ho Su and Barski, Artem and Zhang, Fan and Kartashov, Andrey V. and Nussenzweig, Andre and Chen, Junjie and Andreassen, Paul R. and Namekawa, Satoshi H.},
 doi = {10.1101/gad.202713.112},
 file = {:Users/nils/Documents/Mendeley Desktop/Genes Dev.-2012-Sin-2737-48.pdf:pdf},
-isbn = {1549-5477 (Electronic)0890-9369 (Linking)},
+isbn = {1549-5477 (Electronic)
+0890-9369 (Linking)},
 issn = {08909369},
 journal = {Genes and Development},
 keywords = {DNA damage response,Epigenetics,Escape genes,Germ cells,Sex chromosomes},
@@ -10753,7 +10775,8 @@ abstract = {Large-scale surveys of single-cell gene expression have the potentia
 author = {Pollen, Alex a and Nowakowski, Tomasz J and Shuga, Joe and Wang, Xiaohui and Leyrat, Anne a and Lui, Jan H and Li, Nianzhen and Szpankowski, Lukasz and Fowler, Brian and Chen, Peilin and Ramalingam, Naveen and Sun, Gang and Thu, Myo and Norris, Michael and Lebofsky, Ronald and Toppani, Dominique and Kemp, Darnell W and Wong, Michael and Clerkson, Barry and Jones, Brittnee N and Wu, Shiquan and Knutsson, Lawrence and Alvarado, Beatriz and Wang, Jing and Weaver, Lesley S and May, Andrew P and Jones, Robert C and Unger, Marc a and Kriegstein, Arnold R and West, Jay a a},
 doi = {10.1038/nbt.2967},
 file = {:Users/nils/Documents/Mendeley Desktop/Pollen et al. - 2014 - Low-coverage single-cell mRNA sequencing reveals cellular heterogeneity and activated signaling pathways in devel.pdf:pdf},
-isbn = {1546-1696 (Electronic)1087-0156 (Linking)},
+isbn = {1546-1696 (Electronic)
+1087-0156 (Linking)},
 issn = {1087-0156},
 journal = {Nature Biotechnology},
 number = {10},
@@ -13282,7 +13305,8 @@ abstract = {Phenotypic plasticity of microbial cells has attracted much attentio
 author = {Delvigne, Frank and Baert, Jonathan and Sassi, Hosni and Fickers, Patrick and Gr{\"{u}}nberger, Alexander and Dusny, Christian},
 doi = {10.1002/biot.201600549},
 file = {:Users/nils/Documents/Mendeley Desktop/Delvigne et al. - 2017 - Taking control over microbial populations Current approaches for exploiting biological noise in bioprocesses.pdf:pdf},
-isbn = {1860-7314 (Electronic)1860-6768 (Linking)},
+isbn = {1860-7314 (Electronic)
+1860-6768 (Linking)},
 issn = {18607314},
 journal = {Biotechnology Journal},
 keywords = {Flow cytometry,Microbial stress,Microfluidics,Phenotypic heterogeneity,Single cell},
@@ -13379,7 +13403,8 @@ abstract = {A large number of clustering approaches have been proposed for the a
 author = {Madeira, Sara C and Oliveira, Arlindo L},
 doi = {10.1109/TCBB.2004.2},
 file = {:Users/nils/Documents/Mendeley Desktop/Madeira, Oliveira - 2004 - Biclustering algorithms for biological data analysis a survey.pdf:pdf},
-isbn = {1545-5963 (Print)1545-5963 (Linking)},
+isbn = {1545-5963 (Print)
+1545-5963 (Linking)},
 issn = {1545-5963},
 journal = {IEEE/ACM transactions on computational biology and bioinformatics / IEEE, ACM},
 pages = {24--45},
@@ -13525,7 +13550,8 @@ year = {2015}
 abstract = {To mechanistically characterize the microevolutionary processes active in altering transcription factor (TF) binding among closely related mammals, we compared the genome-wide binding of three tissue-specific TFs that control liver gene expression in six rodents. Despite an overall fast turnover of TF binding locations between species, we identified thousands of TF regions of highly constrained TF binding intensity. Although individual mutations in bound sequence motifs can influence TF binding, most binding differences occur in the absence of nearby sequence variations. Instead, combinatorial binding was found to be significant for genetic and evolutionary stability; cobound TFs tend to disappear in concert and were sensitive to genetic knockout of partner TFs. The large, qualitative differences in genomic regions bound between closely related mammals, when contrasted with the smaller, quantitative TF binding differences among Drosophila species, illustrate how genome structure and population genetics together shape regulatory evolution. {\textcopyright} 2013 Elsevier Inc.},
 author = {Stefflova, Klara and Thybert, David and Wilson, Michael D. and Streeter, Ian and Aleksic, Jelena and Karagianni, Panagiota and Brazma, Alvis and Adams, David J. and Talianidis, Iannis and Marioni, John C. and Flicek, Paul and Odom, Duncan T.},
 doi = {10.1016/j.cell.2013.07.007},
-isbn = {1097-4172 (Electronic)0092-8674 (Linking)},
+isbn = {1097-4172 (Electronic)
+0092-8674 (Linking)},
 issn = {00928674},
 journal = {Cell},
 number = {3},
@@ -13571,7 +13597,8 @@ abstract = {We present combinatorial single cell Hi-C, a novel method that lever
 author = {Ramani, Vijay and Deng, Xinxian and Qiu, Ruolan and Gunderson, Kevin L. and Steemers, Frank J. and Disteche, Christine M. and Noble, William S. and Duan, Zhijun and Shendure, Jay},
 doi = {10.1038/nmeth.4155},
 file = {:Users/nils/Documents/Mendeley Desktop/ramani2017.pdf:pdf},
-isbn = {1548-7105 (Electronic)1548-7091 (Linking)},
+isbn = {1548-7105 (Electronic)
+1548-7091 (Linking)},
 issn = {15487105},
 journal = {Nature Methods},
 number = {3},
@@ -14312,7 +14339,8 @@ abstract = {Single-cell gene expression profiles of differentiating cells encode
 author = {Haghverdi, Laleh and B{\"{u}}ttner, Maren and Wolf, F Alexander and Buettner, Florian and Theis, Fabian J},
 doi = {10.1038/nmeth.3971},
 file = {:Users/nils/Documents/Mendeley Desktop/Haghverdi et al. - 2016 - Diffusion pseudotime robustly reconstructs lineage branching.pdf:pdf},
-isbn = {1548-7105 (Electronic)1548-7091 (Linking)},
+isbn = {1548-7105 (Electronic)
+1548-7091 (Linking)},
 issn = {1548-7091},
 journal = {Nature Methods},
 number = {10},
@@ -14492,7 +14520,8 @@ abstract = {Tumor organoids are 3D cultures of cancer cells. They can be derived
 author = {Cuppen, Edwin P. J. G. and {Gadellaa-van Hooijdonk}, Christa G. M. and Dijkstra, Krijn K. and Weeber, Fleur and Krijgsman, Oscar and Vries, Robert G. and van de Wetering, Marc and Peeper, Daniel S. and Clevers, Hans and van der Velden, Daphne L. and Hoogstraat, Marlous and Voest, Emile E. and Kuilman, Thomas},
 doi = {10.1073/pnas.1516689112},
 file = {:Users/nils/Documents/Mendeley Desktop/13308.full.pdf:pdf},
-isbn = {1091-6490 (Electronic)0027-8424 (Linking)},
+isbn = {1091-6490 (Electronic)
+0027-8424 (Linking)},
 issn = {0027-8424},
 journal = {Proceedings of the National Academy of Sciences},
 number = {43},
@@ -14686,7 +14715,8 @@ abstract = {T cell Ig and ITIM domain (TIGIT) is a newly identified receptor exp
 author = {Lozano, E. and Dominguez-Villar, M. and Kuchroo, V. and Hafler, D. A.},
 doi = {10.4049/jimmunol.1103627},
 file = {:Users/nils/Documents/Mendeley Desktop/3869.full.pdf:pdf},
-isbn = {0022-17671550-6606},
+isbn = {0022-1767
+1550-6606},
 issn = {0022-1767},
 journal = {The Journal of Immunology},
 number = {8},
@@ -16190,7 +16220,8 @@ author = {Gjorevski, Nikolce and Sachs, Norman and Manfrin, Andrea and Giger, So
 doi = {10.1038/nature20168},
 eprint = {15334406},
 file = {:Users/nils/Documents/Mendeley Desktop/gjorevski2016.pdf:pdf},
-isbn = {1476-4687 (Electronic)0028-0836 (Linking)},
+isbn = {1476-4687 (Electronic)
+0028-0836 (Linking)},
 issn = {14764687},
 journal = {Nature},
 number = {7630},
@@ -16223,7 +16254,8 @@ abstract = {Human liver cancer research currently lacks in vitro models that fai
 author = {Broutier, Laura and Mastrogiovanni, Gianmarco and Verstegen, Monique M.A. and Francies, Hayley E. and Gavarr{\'{o}}, Lena Morrill and Bradshaw, Charles R. and Allen, George E. and Arnes-Benito, Robert and Sidorova, Olga and Gaspersz, Marcia P. and Georgakopoulos, Nikitas and Koo, Bon Kyoung and Dietmann, Sabine and Davies, Susan E. and Praseedom, Raaj K. and Lieshout, Ruby and IJzermans, Jan N.M. and Wigmore, Stephen J. and Saeb-Parsy, Kourosh and Garnett, Mathew J. and {Van Der Laan}, Luc J.W. and Huch, Meritxell},
 doi = {10.1038/nm.4438},
 file = {:Users/nils/Documents/Mendeley Desktop/broutier2017.pdf:pdf},
-isbn = {1546-170X (Electronic)1078-8956 (Linking)},
+isbn = {1546-170X (Electronic)
+1078-8956 (Linking)},
 issn = {1546170X},
 journal = {Nature Medicine},
 number = {12},
@@ -16611,7 +16643,8 @@ abstract = {The basic helix-loop-helix transcription factor twist plays a key ro
 author = {Pfeifer, Kathrin and Schaub, Christoph and Wolfstetter, Georg and Dorresteijn, Adriaan},
 doi = {10.1007/s00427-013-0448-6},
 file = {:Users/nils/Documents/Mendeley Desktop/Pfeifer et al. - 2013 - Identification and characterization of a twist ortholog in the polychaete annelid Platynereis dumerilii reveals.pdf:pdf},
-isbn = {1432-041X (Electronic)0949-944X (Linking)},
+isbn = {1432-041X (Electronic)
+0949-944X (Linking)},
 issn = {0949944X},
 journal = {Development Genes and Evolution},
 keywords = {Muscle,Posterior growth,Regeneration,Segmentation,Transcription factor},
@@ -17364,7 +17397,8 @@ abstract = {Male germ cell differentiation entails the synthesis and remodeling 
 author = {Oresti, Gerardo M. and Garc{\'{i}}a-L{\'{o}}pez, Jes{\'{u}}s and Aveldan{\~{o}}, Marta I. and {Del Mazo}, Jes{\'{u}}s},
 doi = {10.1530/REP-13-0199},
 file = {:Users/nils/Documents/Mendeley Desktop/471.full(2).pdf:pdf},
-isbn = {1741-7899 (Electronic)1470-1626 (Linking)},
+isbn = {1741-7899 (Electronic)
+1470-1626 (Linking)},
 issn = {14701626},
 journal = {Reproduction},
 number = {5},
@@ -18192,7 +18226,8 @@ author = {Tirosh, Itay and Izar, Benjamin and Prakadan, Sanjay M. and Wadsworth,
 doi = {10.1126/science.aad0501},
 eprint = {arXiv:1011.1669v3},
 file = {:Users/nils/Documents/Mendeley Desktop/Tirosh et al. - 2016 - Dissecting the multicellular ecosystem of metastatic melanoma by single-cell RNA-seq(2).pdf:pdf},
-isbn = {1095-9203 (Electronic)0036-8075 (Linking)},
+isbn = {1095-9203 (Electronic)
+0036-8075 (Linking)},
 issn = {0036-8075},
 journal = {Science},
 number = {6282},
@@ -19014,4 +19049,63 @@ pmid = {25792328},
 title = {{HHS Public Access}},
 volume = {2},
 year = {2015}
+}
+
+
+
+@article{CowlesCarlin1996,
+    author = { Mary   Kathryn   Cowles  and  Bradley P.   Carlin },
+    title = {Markov Chain Monte Carlo Convergence Diagnostics: A Comparative Review},
+    journal = {Journal of the American Statistical Association},
+    volume = {91},
+    number = {434},
+    pages = {883-904},
+    year  = {1996},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/01621459.1996.10476956},
+
+    URL = { 
+            https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1996.10476956
+        
+    },
+    eprint = { 
+            https://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1996.10476956
+        
+    }
+
+}
+
+
+@article{BrooksGelman1998,
+    author = { Stephen P.   Brooks  and  Andrew   Gelman },
+    title = {General Methods for Monitoring Convergence of Iterative Simulations},
+    journal = {Journal of Computational and Graphical Statistics},
+    volume = {7},
+    number = {4},
+    pages = {434-455},
+    year  = {1998},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/10618600.1998.10474787},
+
+    URL = { 
+            https://amstat.tandfonline.com/doi/abs/10.1080/10618600.1998.10474787
+        
+    },
+    eprint = { 
+            https://amstat.tandfonline.com/doi/pdf/10.1080/10618600.1998.10474787
+        
+    }
+
+}
+
+@article{CODA2006,
+          volume = {6},
+          number = {1},
+           month = {March},
+          author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines},
+           title = {CODA: convergence diagnosis and output analysis for MCMC},
+         journal = {R News},
+           pages = {7--11},
+            year = {2006},
+             url = {http://oro.open.ac.uk/22547/},
 }
